# CRUD

./: README.md  database.cabal  database.sqlite  main.hs  requirements.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Lib.hs  Main.hs
