cabal-version:       >= 1.10
name:                mydatabaseproject
version:             0.1.0.0
build-type:          Simple

executable mydatabaseproject-exe
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , persistent
                     , persistent-sqlite
  default-language:    Haskell2010
