cabal-version:       >= 1.10
name:                database
version:             0.1.0.0
build-type:          Simple

executable database-exe
  main-is:             app/Main.hs
  build-depends:       base >= 4.7 && < 5
                     , persistent
                     , persistent-sqlite
  default-language:    Haskell2010
