cabal-version:       >= 1.10
name:                database
version:             0.1.0.0
build-type:          Simple

executable database-exe
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , resourcet
                     , text
  default-language:    Haskell2010
  hs-source-dirs:      app, src
  other-modules:       Lib